# boutique-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  commands.txt  docker-compose.yaml  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example  pyproject.toml  todo.txt
kubernetes-manifests/: botique-bot-serviceaccount.yaml  boutique-bot-clusterrolebinding.yaml  boutique-bot-deployment.yaml  boutique-bot-service.yaml  redis-chat-history-deployment.yaml  redis-chat-history-service.yaml
scripts/: chg_svc_type_as_lb.sh  commands.sh  deploy_to_kubernetes.sh  test_all_svcs.sh  test_one_svc.sh
src/: chat.py  help.py  main.py  sidebar.py  stats.py  storage.py
src/agents/: __init__.py  ad_agent.py  agent_class.py  browser_agent.py  cart_agent.py  checkout_agent.py  currency_agent.py  email_agent.py  health_check_agent.py  kubernetes_agent.py  payment_agent.py  product_catalog_agent.py  recommendation_agent.py  shipping_agent.py
src/clients/: ad_client.py  cart_client.py  checkout_client.py  currency_client.py  email_client.py  health_check_client.py  payment_client.py  product_catalog_client.py  recommendation_client.py  shipping_client.py
